feat: add Gluon iOS support and related improvements